relabel search box

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class='layout__nav is-hidden'>
-        <input id="searchbox" class='input' aria-label='Diagram navigation' placeholder='Start typing…' />
+        <input id="searchbox" class='input' aria-label='Diagram navigation' placeholder='Choose Pathway' />
         <button id='export' class='btn'>Export PNG</button>
 
         <div class='nav-links'></div>
